# ai_learning

./: Cargo.toml  README.md
data/lesson8/: train.txt  val.txt
src/activity/: lesson1.rs  lesson2.rs  lesson3.rs  lesson4.rs  lesson5.rs  lesson7.rs
src/activity/lesson6/: cli.rs  data.rs  main.rs  model.rs  predict.rs  train.rs
src/activity/lesson8/: attention.rs  data.rs  generate.rs  main.rs  model.rs  train.rs
