[package]
name = "ai_learning"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.14.0", features = ["wgpu", "vision", "train"] }
tokio = { version = "1.0", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.15"
rand = "0.8"

[[bin]]
name = "activity1"
path = "src/activity/lesson1.rs"

[[bin]]
name = "activity2"
path = "src/activity/lesson2.rs"

[[bin]]
name = "activity3"
path = "src/activity/lesson3.rs"
