[package]
name = "ai_learning"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.14.0", features = ["wgpu", "vision", "train", "ndarray"] }
tokio = { version = "1.0", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.15"
rand = "0.8"
csv = "1.3"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "activity1"
path = "src/activity/lesson1.rs"

[[bin]]
name = "activity2"
path = "src/activity/lesson2.rs"

[[bin]]
name = "activity3"
path = "src/activity/lesson3.rs"

[[bin]]
name = "activity4"
path = "src/activity/lesson4.rs"

[[bin]]
name = "activity5"
path = "src/activity/lesson5.rs"

[[bin]]
name = "lesson6"
path = "src/activity/lesson6/main.rs"
[[bin]]
name = "activity7"
path = "src/activity/lesson7.rs"
